@@ -644,9 +644,9 @@ function workflow_admin_ui_states_form($form, $form_state, $workflow) {
 
   // Get the state objects as array ($sid => WorkflowState)
   $states = $workflow->getStates($all = TRUE);
-  // Dummy object for new state item.
+  // Create a dummy object for new state item.
   $wid = $workflow->wid;
-  $dummy = WorkflowState::create($wid);
+  $dummy = $workflow->createState('');
   $dummy->weight = 99;
   $states[$dummy->sid] = $dummy; // Although the index is 0, the state is appended at the end of the list.
 
@@ -865,7 +865,7 @@ function workflow_admin_ui_states_form_submit($form, &$form_state) {
     }
 
     // Reload $state from db, in case the states were changed by anyone else. And it is just as fast.
-    $state = ($sid) ? WorkflowState::load($sid) : WorkflowState::create($wid);
+    $state = ($sid) ? WorkflowState::load($sid) : $workflow->createState('');
 
     // Does user want to deactivate the state (reassign current nodes)?
     if ($sid > 0 && $item['status'] == 0 && $state->isActive()) {
